--- a/theme/templates/accounts/shop_profile.html
+++ b/theme/templates/accounts/shop_profile.html
@@ -77,7 +77,7 @@
     <span class="line" style="margin-bottom:0px;"></span>
     <div class="clearfix"></div>
     <a href="{% url "profile" shop.user %}"><span> {{ shop.user.profile.get_full_name }}</span></a>
-    <p>{{ shop.user.profile.country }}, {{ shop.user.profile.city }}</p>
+    <p>{{ shop.user.profile.get_location }}</p>
     <div class="clearfix"></div>
 
     <a class="popup-with-zoom-anim button color" href="#small-dialog">Задать вопрос</a>
@@ -93,6 +93,60 @@
 
 <div class="sixteen columns margin-top-25">
 	{# {% include "accounts/includes/shop_widget.html" %} #}
+    <!-- Products -->
+    <div class="widget">
+    <h3 class="headline">Товары</h3><span class="line"></span><div class="clearfix"></div>
+    <div class="sixteen columns products">
+            {% for product in shop.user.product_set.all|slice:"10" %}
+            <div class="three shop columns custom_column">
+                <figure class="product">
+                    <div class="badges">
+                    {% if product.pre_order %}
+                        <div class="product-example">Для примера</div>
+                    {# {% else %} #}
+                        <!--<div class="product-ready">Готовый вариант</div>-->
+                    {% endif %}
+                    {% if product.on_custom_sale %}
+                        <div class="product-discnt">СКИДКА</div>
+                    {% endif %}
+                    </div>
+                    {% with product.images.all|slice:"2" as images %}
+                    <div class="mediaholder {% if not images or images.count == 1 %}no-anim{%endif%}">
+                    <a href="{{ product.get_absolute_url }}">
+                        {% if images %}
+                        <img alt="" src="{{ MEDIA_URL }}{% thumbnail images.0 250 330 %}">
+                            {% if product.image.count != 1 %}
+                            <div class="cover">
+                                    <img alt="" src="{{ MEDIA_URL }}{% thumbnail images.1 300 380 %}">
+                            </div>
+                            {% endif %}
+                        {% else %}
+                        <img alt="" src="{{ STATIC_URL }}{% thumbnail 'images/no-image.jpg' 250 330 %}">
+                        {% endif %}
+                    </a>
+                    <a href="{{ product.get_absolute_url }}" class="product-button"><i class="fa fa-share"></i>Подробнее</a>
+                    </div>
+                    {% endwith %}
+                    <a href="{{ product.get_absolute_url }}">
+                        <section>
+                            <h5>{{ product.title|title|truncatechars:34 }}</h5>
+                            <a href="{{ product.user.shop.get_absolute_url }}" class="shopname">{{ product.user.shop.shopname }}</a>
+                            <!--<span class="product-category">
+                            </span>-->
+                            {% if product.on_custom_sale %}
+                                <span class="product-price-discount">{{ product.unit_price|rub_currency }}<i>{{ product.price|rub_currency }}</i></span>
+                            {% else %}
+                            <span class="product-price">{{ product.price|rub_currency }}</span>
+                            {% endif %}
+                        </section>
+                    </a>
+                </figure>
+            </div>
+            {% endfor %}
+        
+    </div>
+    <div class="clearfix"></div>
+    </div>
 </div>
 {% endblock %}
 
