--- a/theme/templates/shop/billing_shipping.html
+++ b/theme/templates/shop/billing_shipping.html
@@ -1,49 +1,37 @@
 {% extends "shop/checkout.html" %}
 {% load staticfiles i18n mezzanine_tags %}
-
-{% block fields %}
-{% if request.cart.has_items %}
-{% if not request.user.is_authenticated %}
-{% ifinstalled mezzanine.accounts %}
-<p>
-{% url "login" as login_url %}
-{% url "signup" as signup_url %}
-{% with request.path as next %}
-{% blocktrans %}
-If you have an existing account or would like to create one, please
-<a href="{{ login_url }}?next={{ next }}">log in</a> or
-<a href="{{ signup_url }}?next={{ next }}">sign up</a>.
-{% endblocktrans %}
-{% endwith %}
-</p>
-{% endifinstalled %}
-{% endif %}
-
-{% errors_for form %}
-
-<fieldset>
-    <legend>{% trans "Billing Details" %}</legend>
-    {% fields_for form.billing_detail_fields %}
-</fieldset>
-
-<fieldset>
-    <legend>{% trans "Delivery Details" %}</legend>
-    {% fields_for form.same_billing_shipping_field %}
-    <div id="shipping_fields">{% fields_for form.shipping_detail_fields %}</div>
-    {% fields_for form.additional_instructions_field %}
-    {% fields_for form.remember_field %}
-</fieldset>
-
-{% if not settings.SHOP_CHECKOUT_STEPS_SPLIT and settings.SHOP_PAYMENT_STEP_ENABLED %}
-{% include "shop/includes/payment_fields.html" %}
-{% endif %}
-
-{% fields_for form.other_fields %}
-
-{% endif %}
-{% endblock %}
-
-{% block exstra_js %}
+{% block extra_js %}
 {{ block.super }}
 <script src="{% static "cartridge/js/shipping_fields.js" %}"></script>
 {% endblock %}
+
+
+{% block fields %}
+{% if request.cart.has_items %}
+	{% errors_for form %}
+	<div class="checkout-section active"><span>1</span> {% trans "Billing Details" %}</div>
+	<div class="checkout-content">
+	    {% fields_for form.billing_detail_fields %}
+	</div>
+	<div class="clearfix"></div>
+
+	<div class="checkout-section active"><span>2</span> {% trans "Delivery Details" %}</div>
+	<div class="checkout-content">
+	    {% fields_for form.same_billing_shipping_field %}
+	
+
+	    <div id="shipping_fields">
+	    	{% fields_for form.shipping_detail_fields %}
+	    </div>
+	    {% fields_for form.additional_instructions_field %}
+	    {% fields_for form.remember_field %}
+	</div>
+	<div class="clearfix"></div>
+	{% if not settings.SHOP_CHECKOUT_STEPS_SPLIT and settings.SHOP_PAYMENT_STEP_ENABLED %}
+		{% include "shop/includes/payment_fields.html" %}
+	{% endif %}
+
+	{% fields_for form.other_fields %}
+{% endif %}
+{% endblock %}
+
