--- a/theme/templates/shop/product.html
+++ b/theme/templates/shop/product.html
@@ -79,20 +79,18 @@
 					Описание товара отсутствует
 				{% endif %}
 			</p>
-
-			{% if has_available_variations %}
+			{% if not on_vacation %}
 				{% errors_for add_product_form %}
 				<section>
 				<form method="post" id="add-cart" class="shop-form">
-				    {# {% fields_for add_product_form %} #}
+				    {% fields_for add_product_form %}
 				    <div class="form-actions">
-				        <!--<input type="submit" class="button dark adc" name="add_cart" value="{% trans "Buy" %}">-->
+				        <input type="submit" class="button dark adc" name="add_cart" value="{% trans "Buy" %}" {% if product.user.shop.on_vacation %}disabled{% endif %}>
 				        {% if settings.SHOP_USE_WISHLIST %}
-				        <!--<input type="submit" class="btn btn-default btn-lg pull-left" name="add_wishlist" value="{% trans "Save for later" %}">-->
+				        	<input type="submit" class="button dark adc" name="add_wishlist" value="{% trans "Save for later" %}">
 				        {% endif %}
 				    </div>
 				</form>
-				<a {% if not product.user.shop.on_vacation %}href="#"{% endif %} class="button dark {% if product.user.shop.on_vacation %}disabled{% endif %}">{% trans "Buy" %}</a>
 				<div class="clearfix"></div>
 				</section>
 			{% else %}
@@ -115,11 +113,11 @@
 			{% if product.user.shop.on_vacation %}
 				<div class="product-example red">Магазин на каникулах</div>
 			{% endif %}
-			<a href="{{ product.user.shop.get_absolute_url }}">
-				<img src="{{ MEDIA_URL }}{% thumbnail product.user.shop.image 80 80 %}" class="pull-left margin-right-5">
-				<h2>{{ product.user.shop.shopname }}</h2>
+			<a href="{{ shop.get_absolute_url }}">
+				<img src="{{ MEDIA_URL }}{% thumbnail shop.image 80 80 %}" class="pull-left margin-right-5">
+				<h2>{{ shop.shopname }}</h2>
 			</a>
-			<p><i class="fa fa-map-marker"></i> <strong>{{ product.user.profile.country }}, {{ product.user.profile.city }}</strong><p>
+			<p><i class="fa fa-map-marker"></i> <strong>{{ shop.user.profile.get_location }}</strong><p>
 		</div>	
 	</section>
 	</div>
@@ -141,7 +139,7 @@
 					<li><a href="#tab5">Правила магазина</a></li>
 				{% endif %}
 				
-				<!--<li><a href="#tab3">Комментарии <span class="tab-reviews"></span></a></li>-->
+				<li><a href="#tab3">Отзывы <span class="tab-reviews"></span></a></li>
 			</ul>
 
 			<!-- Tabs Content -->
@@ -207,12 +205,12 @@
 						<div class="product-discnt">СКИДКА</div>
 					{% endif %}
 					</div>
-					{% get_product_images product as images %}
+					{% with product.images.all|slice:"2" as images %}
 					<div class="mediaholder {% if not images or images.count == 1 %}no-anim{%endif%}">
 					<a href="{{ product.get_absolute_url }}">
 						{% if images %}
 						<img alt="" src="{{ MEDIA_URL }}{% thumbnail images.0 250 330 %}">
-							{% if images.count != 1 %}
+							{% if product.image.count != 1 %}
 							<div class="cover">
 									<img alt="" src="{{ MEDIA_URL }}{% thumbnail images.1 300 380 %}">
 							</div>
@@ -223,6 +221,7 @@
 					</a>
 					<a href="{{ product.get_absolute_url }}" class="product-button"><i class="fa fa-share"></i>Подробнее</a>
 					</div>
+					{% endwith %}
 					<a href="{{ product.get_absolute_url }}">
 						<section>
 							<h5>{{ product.title|title|truncatechars:34 }}</h5>
